src/test/resources/Parser/SyntaxErrors/TooManyArgumentsAssign.front
class A:
    f() {
        i : int64 = 4,2;
    }